Task Implementation Using Promises With RSVP Library

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "morgan": "~1.0.0",
-    "request": "^2.55.0"
+    "request": "^2.55.0",
+    "rsvp": "~4.8.2"
   }
 }
